The code for food analysis has been reorganized into different modules, which can now be flexibly tested according to different modules